<resources>
    <string name="facebook_app_id">127658787785082</string>
    <string name="fb_login_protocol_scheme">fb127658787785082</string>
    <string name="twitter_consumer_key" translatable="false">419WvaDQvAQHOjeOJMr2vXUeX</string>
    <string name="twitter_consumer_secret" translatable="false">3R3cGoDZf24pyfoOfAPOIKGawJXSv0rdnfbZsVheP0FY3nIlV4</string>
    <string name="title_home">Home</string>
    <string name="title_new_quote">New Quote</string>
    <string name="title_new_post">New Post</string>
    <string name="title_choose_category">Category</string>
    <string name="title_publish_quote">Publish</string>
    <string name="title_my_account">My Account</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_followers">Followers</string>
    <string name="title_quote">Quote</string>
    <string name="title_quotes">Quotes</string>
    <string name="title_explore">Explore</string>
    <string name="title_comments">Comments</string>
    <string name="title_latest">Latest</string>
    <string name="title_trending">Trending</string>
    <string name="title_popular">Popular</string>
    <string name="title_authors">Authors</string>
    <string name="menu_item_home_bottom_nav_home">Home</string>
    <string name="menu_item_quotes_bottom_nav_home">Explore</string>
    <string name="menu_item_write_quote_bottom_nav_home">Write</string>
    <string name="menu_item_account_bottom_nav_home">Account</string>
    <string name="text_welcome_title_home">Welcome to Author!</string>
    <string name="text_welcome_body_home">The way to compose and share your beautiful thoughts. Explore our incredible quotes collection and start following others.</string>
    <string name="text_default_quote_fragment_write_quote_fragment">Double tap here to edit</string>
    <string name="text_social_login_sign_in">Social Login</string>
    <string name="text_email_login_sign_in">Or via Email</string>
    <string name="text_no_account_sign_in">Don\'t have an account?</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_have_account_sign_up">Already have an account?</string>
    <string name="text_forgot_password_sign_in">Forgot Password?</string>
    <string name="text_categories">Categories</string>
    <string name="text_language">Language: </string>
    <string name="text_tags">Tags</string>
    <string name="text_source">Source: </string>
    <string name="text_select_language">Select language</string>
    <string name="text_select_country">Select country</string>
    <string name="text_select_category">Select category</string>
    <string name="text_select_category_hint">Choose maximum 3 categories</string>
    <string name="text_search_tags">Search Tags</string>
    <string name="text_search_tags_hint">Tag helps users to search your quote</string>
    <string name="text_copyright">Copyright</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_is_copyrighted_content">Is this your own creation?</string>
    <string name="text_forgot_password_message">We will send a link to this email using which you will be able to reset password.</string>
    <string name="text_quotes">Quotes</string>
    <string name="text_followers">Followers</string>
    <string name="text_likes">Likes</string>
    <string name="text_following">Following</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_your_quotes">Your Quotes</string>
    <string name="text_your_followers">Your Followers</string>
    <string name="text_you_follows">You Follows</string>
    <string name="text_settings">Settings</string>
    <string name="text_invite_friends">Invite Friends</string>
    <string name="text_share_app">Share app</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_update_password">Update Password</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_share_quote">Share Quote</string>
    <string name="text_reason_for_report">Reason for Report</string>
    <string name="text_filter_selected">%s selected</string>
    <string name="text_quotes_on">Quotes on %s</string>
    <string name="text_yours">Your %s</string>
    <string name="text_you">You %s</string>
    <string name="text_quote_liked_by">Quote liked by</string>
    <string name="text_share_via">Share via</string>
    <string name="text_original">original</string>
    <string name="text_rotate">Rotate</string>
    <string name="text_horizon">Horizon.</string>
    <string name="text_vertical">Vertical</string>
    <string name="text_flip">Flip</string>
    <string name="text_please_wait">Please Wait...</string>
    <string name="text_loading">Loading...</string>
    <string name="text_loading_canvas_image">Loading Images...</string>
    <string name="text_loading_save_quote">Saving Quote...</string>
    <string name="text_loading_save_comment">Saving Comment...</string>
    <string name="text_loading_user_login">Authenticating...</string>
    <string name="text_loading_reset_password_email">Sending email...</string>
    <string name="text_loading_verification_email">Sending verification email...</string>
    <string name="text_loading_user_signup">Creating account...</string>
    <string name="text_loading_update_profile">Updating profile...</string>
    <string name="text_loading_update_password">Updating password...</string>
    <string name="text_loading_downloading_quote">Downloading Quote...</string>
    <string name="text_loading_submitting_report">Submitting Report...</string>
    <string name="text_loading_updating_country">Updating country...</string>
    <string name="text_loading_creating_new_account">Creating account...</string>
    <string name="text_loading_updating_image">Updating image...</string>
    <string name="text_maintenance_title">Author under maintenance</string>
    <string name="text_maintenance_message">Sorry for the inconvenience but We\'ll be up soon.</string>
    <string name="text_dont_ask_again">Don\'t ask again for this version.</string>
    <string name="button_login_google">Google</string>
    <string name="button_login_facebook">Facebook</string>
    <string name="button_login_twitter">Twitter</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_choose_category">Choose category</string>
    <string name="button_publish">Publish</string>
    <string name="button_proceed">Proceed</string>
    <string name="button_update">Update</string>
    <string name="button_explore">Explore</string>
    <string name="button_apply">Apply</string>
    <string name="button_exit">Exit</string>
    <string name="button_skip">Skip</string>
    <string name="hint_email">Email*</string>
    <string name="hint_mobile">Mobile No.</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_name">Your Name*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_confirm_password">Confirm Password*</string>
    <string name="hint_quote_caption">Caption..</string>
    <string name="hint_author_status">Something about yourself..</string>
    <string name="hint_search_category">Search Category</string>
    <string name="hint_enter_tags">Tags (Comma separated)</string>
    <string name="hint_enter_quote_source">Enter original source name</string>
    <string name="hint_enter_comment">Enter comment..</string>
    <string name="hint_search">Search Quotes..</string>
    <string name="hint_title">Title..</string>
    <string name="hint_post_writing">Start writing here...</string>
    <string name="option_item_default_tag">option_tag_default</string>
    <string name="option_item_image_tag">option_tag_image</string>
    <string name="option_item_text_tag">option_tag_text</string>
    <string name="option_item_colorize_fragment_canvas_options">BG color</string>
    <string name="option_item_copy">Duplicate</string>
    <string name="option_item_bring_to_front">Bring To Front</string>
    <string name="option_item_font_color_picker">Font Color</string>
    <string name="option_item_background_color_picker">BG Color</string>
    <string name="option_item_back">Back</string>
    <string name="option_item_canvas_color_picker">BG Color</string>
    <string name="option_item_boxview_color_picker">BG Color</string>
    <string name="option_item_canvas_image">BG Image</string>
    <string name="option_item_canvas_filter">Filters</string>
    <string name="option_item_add_image">Image</string>
    <string name="option_item_add_text">Text</string>
    <string name="option_item_add_box">Box</string>
    <string name="option_item_format">Format</string>
    <string name="option_item_text_size">Text Size</string>
    <string name="option_item_font">Font</string>
    <string name="option_item_bright">Brightness</string>
    <string name="option_item_contrast">Contrast</string>
    <string name="option_item_hue">Hue</string>
    <string name="option_item_satur">Saturation</string>
    <string name="option_item_temp">Temperature</string>
    <string name="option_item_tint">Tint</string>
    <string name="option_item_vignette">Vignette</string>
    <string name="option_item_enhance">Enhance</string>
    <string name="action_ok">Ok</string>
    <string name="action_upgrade">Ok</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset">Reset</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_verify_now">Verify now</string>
    <string name="action_save">Save</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_download">Download</string>
    <string name="action_report">Report</string>
    <string name="action_delete">Delete</string>
    <string name="action_submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="action_retry">Retry</string>
    <string name="msg_exit_confirm">Are you sure? All changes will be lost.</string>
    <string name="msg_reset_confirm">Do you want to reset? All changes will be lost.</string>
    <string name="msg_quote_delete_confirm">Are you sure? Action can not be undone.</string>
    <string name="msg_reset_password_email_sent_success">An email to reset password has been successfully sent to your email. Kindly check the email and reset password.</string>
    <string name="msg_exit_html_editor">Are you sure you want to exit the editor?</string>
    <string name="msg_signup_success">An account verification email has been sent to you. Kindly verify your account before login.</string>
    <string name="msg_unverified_email">This email is not verified.</string>
    <string name="msg_post_quote_report_submit">Thanks for the reporting. We will review this quote and take necessary action accordingly.</string>
    <string name="msg_post_comment_report_submit">Thanks for the reporting. We will review this comment and take necessary action accordingly.</string>
    <string name="msg_dialog_success">Success</string>
    <string name="msg_dialog_warning">Warning</string>
    <string name="msg_dialog_error">Error</string>
    <string name="msg_dialog_default">Error</string>
    <string name="msg_share_app">Read,compose and share your beautiful thoughts.\n\n</string>
    <string name="msg_no_data_available">No data available!</string>
    <string name="msg_image_not_available">Image not available!</string>
    <string name="success_email_sent">Email sent successfully</string>
    <string name="success_signup">Account created successfully</string>
</resources>